Source/WebKit2/WebProcess/Scrolling/RemoteScrollingCoordinator.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2014-2015 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -74,6 +74,12 @@ bool RemoteScrollingCoordinator::coordinatesScrollingForFrameView(const FrameVie
 }
 
 bool RemoteScrollingCoordinator::isRubberBandInProgress() const
+{
+    // FIXME: need to maintain state in the web process?
+    return false;
+}
+
+bool RemoteScrollingCoordinator::isScrollSnapInProgress() const
 {
     // FIXME: need to maintain state in the web process?
     return false;
